tempfile/derive_more/tests/compile_fail/debug/wrong_named_parameter.rs
#[derive(derive_more::Debug)]
pub struct Foo {
    #[debug("Stuff({bars})")]
    bar: String,
}

fn main() {}
